--- a/recipe-book/src/app/app.component.html
+++ b/recipe-book/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header />
+<app-header (navigateRoute)="showPage($event)" />
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes />
-      <app-shopping-list />
+      <app-recipes *ngIf="page === 'recipes'" />
+      <app-shopping-list *ngIf="page === 'shopping-list'" />
     </div>
   </div>
 </div>
