--- a/recipe-book/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe-book/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -1,21 +1,19 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive" />
+    <img [src]="recipe.imagePath" [alt]="recipe.title" class="img-responsive" width="300" height="300" />
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe name</h1>
+    <h1>{{ recipe.title }}</h1>
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdwon-toggle">
-        Manage recipe <span class="caret"></span>
-      </button>
+      <button type="button" class="btn btn-primary dropdwon-toggle">Manage recipe <span class="caret"></span></button>
 
       <ul class="dropdown-menu">
         <li><a href="#">Add Ingrediet</a></li>
@@ -27,9 +25,9 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-12">Description</div>
+  <div class="col-xs-12">{{ recipe.description }}</div>
 </div>
 
 <div class="row">
-  <div class="col-xs-12">Ingredients</div>
+  <div class="col-xs-12">{{ getIngredients() }}</div>
 </div>
