--- a/recipe-book/src/app/components/recipes/recipes.component.html
+++ b/recipe-book/src/app/components/recipes/recipes.component.html
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list />
+    <app-recipe-list (onRecipeSelect)="selectRecipe($event)" />
   </div>
   <div class="col-md-7">
-    <app-recipe-detail />
+    <app-recipe-detail *ngIf="selectedRecipe !== undefined; else info" [recipe]="selectedRecipe" />
+    <ng-template #info> <p>No recipe selected.</p> </ng-template>
   </div>
 </div>
