--- a/recipe-book/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe-book/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,7 @@
       <button type="button" class="btn btn-primary dropdwon-toggle">Manage recipe <span class="caret"></span></button>
 
       <ul class="dropdown-menu">
-        <li><a href="#">Add Ingrediet</a></li>
+        <li><a (click)="onToShoppingListClick()">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -29,5 +29,9 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-12">{{ getIngredients() }}</div>
+  <ul class="list-group">
+    <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item">
+      {{ ingredient.name }} - {{ingredient.amount}}
+    </li>
+  </ul>
 </div>
