--- a/recipe-book/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/recipe-book/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,16 +1,13 @@
-<div class="pull-left">
-  <h4 class="list-group-item-heading">
-    {{ recipe.title }}
-  </h4>
-  <p class="list-group-item-text">
-    {{ recipe.description }}
-  </p>
-</div>
-<span class="pull-right">
-  <img
-    src="{{ recipe.imagePath }}"
-    alt="{{ recipe.title }}"
-    class="img-responsive"
-    style="max-height: 50px"
-  />
-</span>
+<a class="list-group-item clearfix" (click)="onSelect()">
+  <div class="pull-left">
+    <h4 class="list-group-item-heading">
+      {{ recipe.title }}
+    </h4>
+    <p class="list-group-item-text">
+      {{ recipe.description }}
+    </p>
+  </div>
+  <span class="pull-right">
+    <img src="{{ recipe.imagePath }}" alt="{{ recipe.title }}" class="img-responsive" style="max-height: 50px" />
+  </span>
+</a>
