--- a/recipe-book/src/app/components/recipes/recipe-list/recipe-list.component.html
+++ b/recipe-book/src/app/components/recipes/recipe-list/recipe-list.component.html
@@ -6,8 +6,6 @@
 <hr />
 <div class="row">
   <div class="col-xs-12">
-    <a *ngFor="let recipe of recipes" class="list-group-item clearfix" (click)="onSelect(recipe)">
-      <app-recipe-item [recipe]="recipe" />
-    </a>
+    <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe" />
   </div>
 </div>
