--- a/recipe-book/src/app/components/shopping-list/shopping-list.component.html
+++ b/recipe-book/src/app/components/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit (addIngredient)="this.ingredients.push($event)" />
+    <app-shopping-edit />
     <hr />
     <ul class="list-hroup">
       <a *ngFor="let ingredient of ingredients" class="list-group-item" style="cursor: pointer"> {{ ingredient.name }} ({{ ingredient.amount }}) </a>
